HW4/E-1.5.8-GeoHarmMean/wdir_msg/compile.err

GeoHarmMean.java:28: error: class, interface, or enum expected
}
^
1 error


